fix: update z-index for scroll-to-bottom button

--- a/frontend/src/app/components/channel/chat/chat.component.scss
+++ b/frontend/src/app/components/channel/chat/chat.component.scss
@@ -14,5 +14,5 @@ nb-list-item:first-child {
   position: fixed;
   bottom: 40px;
   left: 30px;
-  z-index: 1000;
+  z-index: 1001;
 }
